[gd_scene load_steps=6 format=3 uid="uid://5w6m4pnxsnc4"]

[ext_resource type="PackedScene" uid="uid://48l2vnrueam4" path="res://Graphic Elements/popups/my_popup.tscn" id="1_bctcl"]
[ext_resource type="Script" uid="uid://3eb3ofswab50" path="res://SaveManager/load_game_menu.gd" id="2_jb7uj"]
[ext_resource type="PackedScene" uid="uid://bq273ivsdk1t1" path="res://Graphic Elements/Buttons/save_game_menu_button.tscn" id="3_1w4cb"]
[ext_resource type="PackedScene" uid="uid://c5uhhdm6s5ims" path="res://Graphic Elements/Buttons/my_button.tscn" id="3_6uiar"]
[ext_resource type="Theme" uid="uid://c8cfcbe6ioxu5" path="res://Graphic Elements/Themes/subTab.tres" id="5_1w4cb"]

[node name="LoadGameMenu" instance=ExtResource("1_bctcl")]
script = ExtResource("2_jb7uj")

[node name="Title" parent="Panel/CenterContainer/Window/VBoxContainer" index="0"]
text = "Load Game"

[node name="Text" parent="Panel/CenterContainer/Window/VBoxContainer" index="1"]
text = ""

[node name="Slot0Button" parent="Panel/CenterContainer/Window/VBoxContainer" index="2" instance=ExtResource("3_1w4cb")]
layout_mode = 2

[node name="Slot1Button" parent="Panel/CenterContainer/Window/VBoxContainer" index="3" instance=ExtResource("3_1w4cb")]
layout_mode = 2

[node name="Slot2Button" parent="Panel/CenterContainer/Window/VBoxContainer" index="4" instance=ExtResource("3_1w4cb")]
layout_mode = 2

[node name="Slot3Button" parent="Panel/CenterContainer/Window/VBoxContainer" index="5" instance=ExtResource("3_1w4cb")]
layout_mode = 2

[node name="Spacer" type="Control" parent="Panel/CenterContainer/Window/VBoxContainer" index="6"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/CenterContainer/Window/VBoxContainer" index="7"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8
alignment = 2

[node name="DeleteButton" parent="Panel/CenterContainer/Window/VBoxContainer/VBoxContainer2" index="0" instance=ExtResource("3_6uiar")]
layout_mode = 2
theme = ExtResource("5_1w4cb")
theme_override_font_sizes/font_size = 22
text = "Delete Save"

[node name="ReturnButton" parent="Panel/CenterContainer/Window/VBoxContainer/VBoxContainer2" index="1" instance=ExtResource("3_6uiar")]
layout_mode = 2
theme = ExtResource("5_1w4cb")
theme_override_font_sizes/font_size = 22
text = "Return"

[connection signal="wasSelected" from="Panel/CenterContainer/Window/VBoxContainer/Slot0Button" to="." method="_on_slot_0_button_pressed"]
[connection signal="wasSelected" from="Panel/CenterContainer/Window/VBoxContainer/Slot1Button" to="." method="_on_slot_1_button_pressed"]
[connection signal="wasSelected" from="Panel/CenterContainer/Window/VBoxContainer/Slot2Button" to="." method="_on_slot_2_button_pressed"]
[connection signal="wasSelected" from="Panel/CenterContainer/Window/VBoxContainer/Slot3Button" to="." method="_on_slot_3_button_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/Window/VBoxContainer/VBoxContainer2/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/Window/VBoxContainer/VBoxContainer2/ReturnButton" to="." method="_on_return_button_pressed"]
